<resources>

    <string name="app_name">Moca Administrator App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">AdminApp</string>
    <string name="start_stop">Start/Stop</string>
    <string name="display_results">Display Results</string>
    <string name="multiply_ballots">Multiply Ballots</string>
    <string name="in_progress">In Progress</string>
    <string name="stopped">Stopped</string>
    <string name="settings">Settings</string>
    <string name="add_candidate">Add candidate</string>
    <string name="bb_server_url_setting">BB Server URL:</string>
    <string name="bb_server_hint">http://example.com:3337</string>
    <string name="election_name_hint">Election Name</string>
    <string name="new_election">New Election</string>
    <string name="election_name">Name:</string>
    <string name="candidates_list">Candidates</string>
    <string name="create_election">Create</string>
    <string name="panel_name">Administration Panel</string>
    <string name="elections">Elections</string>
    <string name="title_activity_new_election">NewElectionActivity</string>
    <string name="save">Save</string>
    <string name="upload_to_bb_text">Upload to Bulletin Board</string>
    <string name="candidates_message">Press \'Receive Candidates\' and read this QR code with the tablet</string>
    <string name="multiplication">2x2</string>
    <string name="check_bb_button">Check BB</string>
    <string name="new_election_name">Election Name</string>
    <string name="get_auth_key">Get Authority Public Key</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="next_qr">Generate Second QR</string>
    <string name="public_key_message">Press \'Receive Public Key\' and read this QR code with the tablet</string>
    <string name="results_url_settings">Results Server URL:</string>

</resources>

