<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_election"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@color/button_material_light"
        android:id="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bb_server_url_setting"
        android:id="@+id/new_election_bb_server_text"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/bb_server_hint"
        android:id="@+id/new_election_bb_server_edit"
        android:layout_below="@+id/new_election_bb_server_text"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/election_name"
        android:id="@+id/new_election_name_text"
        android:layout_below="@+id/new_election_bb_server_edit"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/election_name_hint"
        android:gravity="center"
        android:layout_below="@+id/new_election_name_text"
        android:layout_alignParentStart="true"
        android:id="@+id/editText2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/candidates_list"
        android:id="@+id/textView5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/listView"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_candidate"
        android:drawableLeft="@android:drawable/ic_input_add"
        android:background="@color/abc_search_url_text_normal"
        android:id="@+id/button5"
        android:layout_below="@+id/listView"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/create_election"
        android:id="@+id/button6"
        android:background="@color/abc_search_url_text_normal"
        android:layout_below="@+id/button5"
        android:layout_alignParentStart="true" />

</RelativeLayout>
