<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/configuration_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings"
        android:id="@+id/settings_title_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@color/button_material_light"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_candidate"
        android:drawableLeft="@android:drawable/ic_input_add"
        android:id="@+id/new_election_add_candidate_button"
        android:background="@color/abc_search_url_text_normal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bb_server_url_setting"
        android:id="@+id/bb_server_url_text"
        android:layout_below="@+id/settings_title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/bb_server_hint"
        android:id="@+id/bb_server_edit"
        android:layout_below="@id/bb_server_url_text"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save_button"
        android:background="@color/abc_search_url_text_normal"
        android:layout_above="@+id/new_election_add_candidate_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>