<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/election_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Election Name"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@color/button_material_light"/>

    <View
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/rectangleView"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/rectangle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_progress"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/rectangleView"
        android:layout_toEndOf="@+id/rectangleView"
        android:layout_marginStart="10dp"
        android:layout_alignBottom="@+id/rectangleView" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageButton"
        android:layout_marginEnd="26dp"
        android:src="@drawable/settings_icon"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_stop"
        android:id="@+id/button"
        android:layout_marginTop="32dp"
        android:background="@color/abc_search_url_text_normal"
        android:layout_below="@+id/imageButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_results"
        android:id="@+id/button2"
        android:layout_marginTop="21dp"
        android:background="@color/abc_search_url_text_normal"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/count_votes"
        android:id="@+id/button3"
        android:layout_marginTop="23dp"
        android:background="@color/abc_search_url_text_normal"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2" />

</RelativeLayout>
